KUSTOMIZE/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project
  labels:
    projectname: project
