KUSTOMIZE/base/service_alpine-nettools.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: ClusterIP
  selector:
    app: appname
  ports: 
    - protocol: TCP
      port: 9999
      targetPort: 9999
