KUSTOMIZE/base/netpol_ingress_deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-ingress-deny-all
spec:
  policyTypes:
  - Ingress
  podSelector: {}
